`fix` scrollbar-none

--- a/src/markdown.css
+++ b/src/markdown.css
@@ -63,11 +63,11 @@
 }
 
 .markdown code {
-  @apply font-mono text-sm inline bg-gray-200 rounded px-1 py-05 overflow-scroll;
+  @apply font-mono text-sm inline bg-gray-200 rounded px-1 py-05;
 }
 
 .markdown pre {
-  @apply bg-gray-100 rounded p-4;
+  @apply bg-gray-100 rounded p-4  overflow-scroll;
 }
 
 .markdown pre code {
